# app/api-node/src/resources/IBotsResource.ts
@@ -1,6 +1,6 @@
-import IGameProfileResource from "./IGameProfileResource";
 import { IStreamResource } from "./IStreamResource";
 import { IGameResource } from "./IGameResource";
+import IUserResource from "./IUserResource";
 
 export interface IBotsResource {
     id: number;
@@ -14,5 +14,5 @@ export interface IBotsResource {
     armor: number;
     streams? : Array<IStreamResource>;
     games?: Array<IGameResource>;
-    gameProfile?: IGameProfileResource;
+    gameProfile?: IUserResource;
 }
