# app/api-node/src/resources/asm/GameInfoResourceAsm.ts
@@ -1,56 +1,48 @@
 import { Singleton, Container } from "typescript-ioc";
 import { IGameInfoResource } from "../IGameInfoResource";
 import { GameInfoEntity } from "../../database/entities/GameInfoEntity";
-import { GameProfileResourceAsm } from "./GameProfileResourceAsm";
 import { GameResourceAsm } from "./GameResourceAsm";
+import UserEntity from "../../database/entities/UserEntity";
 
 @Singleton
 export class GameInfoResourceAsm {
     async toEntity(resource: IGameInfoResource){
-        const gameProfileResourceAsmm = Container.get(GameProfileResourceAsm);
         const gameResourceAsm = Container.get(GameResourceAsm);
         const entity = new GameInfoEntity();
 
         if (resource.game){
             entity.game = await gameResourceAsm.toEntity(resource.game);
         }
-        entity.gameended_at = resource.gameended_at;
-        entity.gamestarted_at = resource.gamestarted_at;
-        if (resource.winner){
-            entity.winner = gameProfileResourceAsmm.toEntity(resource.winner);
-        }
-        if (resource.loser){
-            entity.loser = gameProfileResourceAsmm.toEntity(resource.loser);
-        }
+        entity.winner = new UserEntity();
+        entity.loser = new UserEntity();
+        entity.winner.id = resource.winner_id;
+        entity.loser.id = resource.loser_id;
         entity.winnerpoints = resource.winnerpoints;
         entity.loserpoints = resource.loserpoints;
         entity.video_loser = resource.video_loser;
         entity.video_winner = resource.video_winner;
+        entity.id = resource.id;
         return (entity);
     }
 
     async toResource(entity: GameInfoEntity){
-        const gameProfileResourceAsmm = Container.get(GameProfileResourceAsm);
         const gameResourceAsm = Container.get(GameResourceAsm);
         const resource : IGameInfoResource = {};
 
         if (entity.game){
             resource.game = await gameResourceAsm.toResource(entity.game);
         }
-        if (entity.loser){
-            resource.loser = await gameProfileResourceAsmm.toResource(entity.loser);
-        }
         if (entity.winner){
-            resource.winner = await gameProfileResourceAsmm.toResource(entity.winner);
+            resource.winner_id = entity.winner.id;
         }
-        resource.gameended_at = entity.gameended_at;
-        resource.gamestarted_at = entity.gamestarted_at;
+        if (entity.loser){
+            resource.loser_id = entity.loser.id;
+        }
         resource.winnerpoints = entity.winnerpoints;
         resource.loserpoints = entity.loserpoints;
         resource.video_loser = entity.video_loser;
         resource.video_winner = entity.video_winner;
-        resource.created_at = entity.createdAt;
-        resource.updated_at = entity.updatedAt;
+        resource.id = entity.id;
         return (resource);
     }
 
